--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         /*containt*/
 
         .backvala {
-            background-image: url(Photo/BACK.jpg);
+            background-image: url(BACK.jpg);
             background-size: cover;
             height: 350px;
         }
@@ -256,7 +256,7 @@
 
                 <i class="fa-solid fa-magnifying-glass" id="FA"></i>
 
-                <img src="Photo/flag.png" alt="" id="fg">
+                <img src="flag.png" alt="" id="fg">
                 <i class="fa-solid fa-caret-down" id="Mor"></i>
             </div>
 
@@ -295,8 +295,8 @@
             <div class="male">
                 <h2>Cloths for male</h2>
                 <div class="ml">
-                    <div class="t"><a href="sign in.html"><img src="Photo/man t.jpg" alt=""></a></div>
-                    <div class="t"><a href="sign in.html"><img src="Photo/men p.jpg" alt=""></a></div>
+                    <div class="t"><a href="sign in.html"><img src="man t.jpg" alt=""></a></div>
+                    <div class="t"><a href="sign in.html"><img src="men p.jpg" alt=""></a></div>
                 </div>
                 <a href="sign in.html" class="a">See more</a>
             </div>
@@ -305,8 +305,8 @@
             <div class="male">
                 <h2>Watches</h2>
                 <div class="ml">
-                    <div class="t"><a href="sign in.html"><img src="Photo/watch m.jpg" alt=""></a></div>
-                    <div class="t"><a href="sign in.html"><img src="Photo/watch_w.jpg" alt="" id="ww"></a></div>
+                    <div class="t"><a href="sign in.html"><img src="watch m.jpg" alt=""></a></div>
+                    <div class="t"><a href="sign in.html"><img src="watch_w.jpg" alt="" id="ww"></a></div>
                 </div>
                 <a href="sign in.html" class="a">See more</a>
             </div>
@@ -315,8 +315,8 @@
             <div class="male">
                 <h3>Mobile & Computer accessories</h3>
                 <div class="ml">
-                    <div class="t"><a href="sign in.html"><img src="Photo/BTS.jpg" alt=""></a></div>
-                    <div class="t"><a href="sign in.html"><img src="Photo/head.jpg" alt="" id="hh"></a></div>
+                    <div class="t"><a href="sign in.html"><img src="BTS.jpg" alt=""></a></div>
+                    <div class="t"><a href="sign in.html"><img src="head.jpg" alt="" id="hh"></a></div>
                 </div>
                 <a href="sign in.html" class="a">See more</a>
             </div>
